# assignment-autonomous-driving-systems

./: .gitignore
assignment_01/: README.md
assignment_01/include/: Renderer.hpp
assignment_01/src/: Renderer.cpp  cluster_extraction.cpp
assignment_02/: CMakeLists.txt  README.md
assignment_02/demo/: main.cpp
assignment_02/include/tracker/: KalmanFilter.h  Tracker.h  Tracklet.h
assignment_02/src/tracker/: KalmanFilter.cpp  Tracker.cpp  Tracklet.cpp
assignment_02/src/viewer/: Renderer.cpp
assignment_03/: README.md
assignment_03/data/: metadata.yaml
assignment_03/src/: package.xml
assignment_03/src/particle/: CMakeLists.txt  package.xml
assignment_03/src/particle/include/particle/: helper_functions.h
assignment_03/src/particle/src/: Renderer.cpp  main.cpp
