<?xml version="1.0"?>
<package format="3">
  <name>pf</name>
  <version>0.0.1</version>
  <description>Particle filter node</description>

  <maintainer email="you@example.com">Sebastian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
