<?xml version="1.0"?>
<package format="3">
  <name>pf</name>
  <version>0.0.1</version>
  <description>PF Node for localization</description>
  <maintainer email="asdas@asda.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <build_depend>eigen3_cmake_module</build_depend>
  
  <exec_depend>eigen3_cmake_module</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>